<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Saving</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="edit_message">Enter a message</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="today_expense">Today\'s expense:</string>
    <string name="daily_expection">Today\'s expectation</string>
    <string name="action_search">Search</string>
    <string name="today_expense_hint">Add expense</string>
    <string name="update">Update</string>
    <string name="preference_file_key">com.example.SimpleSaving.PREFERENCE_FILE_KEY</string>
    <string name="daily_earning">daily_earning</string>
    <string name="monthly_goal">monthly_goal</string>
    <string name="expense_before">expense_before</string>
    <string name="ERROR_NOT_EXIST">ERROR_NOT_EXIST</string>
    <string name="title_activity_settings">Settings</string>
    <string name="ERROR_INCOMPLETED">ERROR_INCOMPLETED</string>
    <string name="fixed_outcome">fixed_outcome</string>
    <string name="clear">Clear</string>
    <string name="title_activity_debug">Debug</string>
    <string name="title_activity_screen_slide_activity">ScreenSlideActivity</string>
    <string name="debug">Debug</string>
    <string name="updateinfo_last_day">updateinfo_last_day</string>
    <string name="updateinfo_last_month">updateinfo_last_month</string>
    
    <!-- Actions -->
    
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="action_finish">Finish</string>
    
    <!-- Actions END-->
    
    <!-- Variable identifiers -->
    
    <string name="var_daily_expection">var_daily_expection</string>
    
    <string name="var_daily_earning">var_daily_earning</string>
    <string name="var_monthly_goal">var_monthly_goal</string>
    <string name="var_expense_before">var_expense_before</string>
    <string name="var_fixed_outcome">var_fixed_outcome</string>
    <string name="var_today_expense">var_today_expense</string>
    <string name="var_first_time_open_app">var_first_time_open_app</string>
    
    
    <!-- Variable identifiers END-->
    
    <string name="title_template_step">Step</string>
    <string name="activity_screen_slide_title">Tutorial</string>
    

</resources>
