<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <PreferenceCategory 
        android:title="Persional Data"
        android:key="@string/preference_file_key">

        <com.example.simplesaving.NumberDialogPref
                  android:defaultValue="0"
                  android:key="@string/var_daily_earning"
                  android:summary="Your income per day"
                  android:title="Daily Earning" />
        <com.example.simplesaving.NumberDialogPref
                  android:defaultValue="0"
                  android:key="@string/var_monthly_goal"
                  android:summary="Your monthly saving goal"
                  android:title="Monthly Goal" />
        <com.example.simplesaving.NumberDialogPref
                  android:defaultValue="0"
                  android:key="@string/var_expense_before"
                  android:summary="From the first day of this month to yesterday"
                  android:title="Expense this month" />
        <com.example.simplesaving.NumberDialogPref
                  android:defaultValue="0"
                  android:key="@string/var_fixed_outcome"
                  android:summary="Rent,insurence,etc"
                  android:title="Fixed outcome per month" />
    </PreferenceCategory>
</PreferenceScreen>
